--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(Lists LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# find_package(pistache REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(PISTACHE REQUIRED libpistache)
+
 find_package(PostgreSQL REQUIRED)
 find_package(nlohmann_json 3.2.0 REQUIRED)
 find_package(Protobuf REQUIRED)
@@ -12,7 +14,7 @@ find_package(Protobuf REQUIRED)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 include_directories(${POSTGRESQL_INCLUDE_DIRS})
-include_directories(/usr/include)
+include_directories(${PISTACHE_INCLUDE_DIRS})
 
 add_subdirectory(proto)
 
@@ -25,7 +27,7 @@ add_executable(posterdb ${SOURCES})
 
 
 target_link_libraries(posterdb
-    /usr/local/lib/x86_64-linux-gnu/libpistache.so
+    ${PISTACHE_LIBRARIES}
     ${POSTGRESQL_LIBRARIES}
     hiredis
     nlohmann_json::nlohmann_json
@@ -33,3 +35,4 @@ target_link_libraries(posterdb
     PosterProto
 )
 
+target_compile_options(posterdb PRIVATE ${PISTACHE_CFLAGS_OTHER})
